# LR1

./: CMakeLists.txt  task_3  task_3.cpp
